--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,15 @@ name = "std-html"
 version = "0.1.0"
 edition = "2021"
 
+[lib]
+crate_type = ["cdylib"]
+
+[build]
+target = "wasm32-unknown-unknown"
+
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+anyhow = "1.0.78"
+extism-pdk = "1.0.0-rc1"
+serde = "1.0.193"
