--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -13,7 +13,8 @@ jobs:
         with:
           github_access_token: ${{ secrets.GITHUB_TOKEN }}
       - run: nix profile install nixpkgs#gh
-      - run: gh auth login --with-token ${{ secrets.GITHUB_TOKEN }}
+      - run: |
+          echo "${{ secrets.GITHUB_TOKEN }}" | gh auth login --with-token
 
       - name: Get current version
         id: version
